tests/failing/test3.tail
i2d(reduce{[int],[0]}(addi,0,eachV{[int,int],[2]}(fn v3:[int]0 => addi(v3,1000),[300,20])))
